# recoll-macos

./: .codespellrc  .gitignore  .hgignore  .hgtags  CITATION.cff  README.md  recoll.sublime-workspace
src/: AUTHORS  CMakeLists.txt  ChangeLog  INSTALL  Makefile  Makefile.am  Makefile.in  README  RECOLL-VERSION.txt  VERSION  autogen.sh  configure  configure.ac  excludefile  makesrcdist.sh  makestaticdist.sh  manifest.txt  meson.build  meson_options.txt  recoll.desktop  recoll.xcf  recollinstall  recollinstall.in  setversion.sh  ylwrap
src/aspell/: Makefile  rclaspell.cpp  rclaspell.h
src/bincimapmime/: Makefile  address.cc  address.h  convert.cc  convert.h  iodevice.cc  iodevice.h  iofactory.cc  iofactory.h  mime-getpart.cc  mime-inputsource.h  mime-parsefull.cc  mime-parseonlyheader.cc  mime-printbody.cc  mime-printdoc.cc  mime-printheader.cc  mime-utils.h  mime.cc  mime.h  trbinc.cc
src/cmake/: FindFileCommand.cmake  FindLibmagic.cmake  FindSystemdPaths.cmake
src/common/: Makefile  autoconfig-mac.h  autoconfig-win.h  autoconfig.h.cmake.in  autoconfig.h.in  beaglequeuecache.cpp  beaglequeuecache.h  cjksplitter.cpp  cjksplitter.h  cnsplitter.cpp  cnsplitter.h  conf_post.h  config.h  cstr.h  kosplitter.cpp  kosplitter.h  plaintorich.cpp  plaintorich.h  rclconfig.cpp  rclconfig.h  rclinit.cpp  rclinit.h  syngroups.cpp  syngroups.h  textsplit.cpp  textsplit.h  textsplitko.cpp  unacpp.cpp  unacpp.h  unordered_defs.h  uproplist.h  utf8fn.cpp  webstore.cpp  webstore.h
src/desktop/: hotrecoll.py  org.recoll.recoll.appdata.xml  recoll-searchgui.desktop  recoll.appdata.xml  recoll_index_on_ac.sh
src/filters/: archivextract.py  cmdtalk.py  cnsplitter.py  eulangclass.py  gnumeric.xsl  kosplitter.py  pffdumpreader.py  ppt-dump.py  rcl7z  rcl7z.py  rclabw  rclabw.py  rclaptosidman  rclaspell-sugg.py  rclaudio  rclaudio.py  rclbasehandler.py  rclbibtex.sh  rclcheckneedretry.sh  rclchm  rclchm.py  rcldia  rcldia.py  rcldjvu  rcldjvu.py  rcldoc  rcldoc.py  rcldvi  rclepub  rclepub.py  rclepub1  rclepub1.py  rclexec1.py  rclexecm.py  rclfb2  rclfb2.py  rclflac  rclgaim  rclgenxslt.py  rclgnm  (+82 more)
src/index/: Makefile  beaglequeue.cpp  beaglequeue.h  bglfetcher.cpp  bglfetcher.h  checkindexed.cpp  checkretryfailed.cpp  checkretryfailed.h  csguess.cpp  csguess.h  exefetcher.cpp  exefetcher.h  fetcher.cpp  fetcher.h  fsfetcher.cpp  fsfetcher.h  fsindexer.cpp  fsindexer.h  idxstatus.cpp  idxstatus.h  indexer.cpp  indexer.h  mimetype.cpp  mimetype.h  rclgrep.cpp  rclmon.h  rclmon.sh  rclmonprc.cpp  rclmonrcv.cpp  rclmonrcv.h  rclmonrcv_fam.cpp  rclmonrcv_fam.h  rclmonrcv_fsevents.cpp  rclmonrcv_fsevents.h  rclmonrcv_inotify.cpp  rclmonrcv_inotify.h  rclmonrcv_win32.cpp  rclmonrcv_win32.h  recollindex-system.service  recollindex.cpp  (+9 more)
src/internfile/: Filter.h  Makefile  extrameta.cpp  extrameta.h  findercomment.cpp  findercomment.h  finderxattr.cpp  finderxattr.h  htmlparse.cpp  htmlparse.h  indextext.h  internfile.cpp  internfile.h  mh_exec.cpp  mh_exec.h  mh_execm.cpp  mh_execm.h  mh_html.cpp  mh_html.h  mh_mail.cpp  mh_mail.h  mh_mbox.cpp  mh_mbox.h  mh_null.h  mh_symlink.h  mh_text.cpp  mh_text.cpp-old  mh_text.h  mh_unknown.h  mh_xslt.cpp  mh_xslt.h  mimehandler.cpp  mimehandler.h  myhtmlparse.cpp  myhtmlparse.h  txtdcode.cpp  uncomp.cpp  uncomp.h
src/lib/: Makefile  mkMake  mkMake.in
src/librecoll/: librecoll.pro
src/mk/: AIX  Darwin  FreeBSD  Linux  OpenBSD  SunOS  commondefs  localdefs  localdefs.in  manifest.txt
src/php/: 00README.txt
src/qmake/: librecoll.pro  libxapian.pro  rclstartw.pro  recollindex.pro  recollq.pro  trpathut.pro  xapian-check.pro
src/qt4gui/: rclmain.ui  recoll.pro.in  recoll.qrc  recollmain.ui  spell.ui  uifrom3
src/qtgui/: =  CMakeLists.txt  actsearch.ui  actsearch_w.cpp  actsearch_w.h  advsearch.ui  advsearch.ui.h  advsearch_w.cpp  advsearch_w.h  advshist.cpp  advshist.h  configswitch.cpp  configswitch.h  configswitch.ui  crontool.cpp  crontool.h  crontool.ui  firstidx.cpp  firstidx.h  firstidx.ui  form1.ui  form1.ui.h  fragbuts.cpp  fragbuts.h  guiutils.cpp  guiutils.h  idxmodel.cpp  idxmodel.h  idxsched.h  idxsched.ui  idxthread.cpp  idxthread.h  main.cpp  meson.build  multisave.cpp  multisave.h  plaintorich.cpp  plaintorich.h  preview.ui  preview_load.cpp  (+86 more)
src/query/: Makefile  docseq.cpp  docseq.h  docseqdb.cpp  docseqdb.h  docseqdocs.h  docseqhist.cpp  docseqhist.h  dynconf.cpp  dynconf.h  filtseq.cpp  filtseq.h  history.cpp  history.h  plaintorich.cpp  plaintorich.h  qresultstore.cpp  qresultstore.h  qtry.cpp  qxtry.cpp  recollq.cpp  recollqmain.cpp  reslistpager.cpp  reslistpager.h  sortseq.cpp  sortseq.h  wasa.y  wasaparse.cpp  wasaparse.hpp  wasaparse.y  wasaparse.ypp  wasaparseaux.cpp  wasaparserdriver.h  wasastringtoquery.cpp  wasastringtoquery.h  wasatorcl.cpp  wasatorcl.h  xadump.cpp  y.tab.h
src/rcldb/: Makefile  daterange.cpp  daterange.h  expansiondbs.cpp  expansiondbs.h  pathhash.cpp  pathhash.h  rclabsfromtext.cpp  rclabstract.cpp  rcldb.cpp  rcldb.h  rcldb_p.h  rcldoc.cpp  rcldoc.h  rcldups.cpp  rclquery.cpp  rclquery.h  rclquery_p.h  rclterms.cpp  rclvalues.cpp  rclvalues.h  searchdata.cpp  searchdata.h  searchdatatox.cpp  searchdataxml.cpp  stemdb.cpp  stemdb.h  stoplist.cpp  stoplist.h  synfamily.cpp  synfamily.h  termproc.h  xmacros.h
src/rclgrep/: Makefile.am  meson.build  rclgrep.cpp
src/sampleconf/: backends  fields  fragbuts.xml  fragment-buttons.xml  mimeconf  mimemap  mimeview  mimeview.mac  recoll-common.css  recoll-common.qss  recoll-dark.css  recoll-dark.qss  recoll.conf  recoll.conf.in  recoll.qss
src/scripts/: init-recoll-volume.sh  makethumb.sh
src/testmains/: Makefile.am  meson.build  rclqdocmem.cpp  trappformime.cpp  traspell.cpp  trbase64.cpp  trbinc.cc  trcircache.cpp  trclosefrom.cpp  trcopyfile.cpp  trcpuconf.cpp  trecrontab.cpp  trexecmd.cpp  trfileudi.cpp  trfstreewalk.cpp  trhldata.cpp  tridfile.cpp  trinternfile.cpp  trmbox.cpp  trmimeparse.cpp  trmimetype.cpp  trpathut.cpp  trplaintorich.cpp  trqrstore.cpp  trrclconfig.cpp  trrcldb.cpp  trrclutil.cpp  trstoplist.cpp  trsubtreelist.cpp  (+8 more)
(+989 files in other folders)
